@@ -1,6 +1,7 @@
 pgmemcache 2.1.3-DEV
 ====================
 
+* Changing default_servers now drops old servers from the list
 * debian: new packaging to replace yada which is not available in
   Debian Wheezy anymore (Oskari Saarenmaa)
 * Use pg_regress for make installcheck testing (Christoph Berg)
